--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,7 @@ figure {
 .index-upper-link:hover,
 .index-upper-link:focus {
     color: var(--index-link-color);
+    transition: cubic-bezier(0.4, 0, 0.2, 1), 250ms;
 }
 
 .index-header-contacts {
@@ -167,12 +168,20 @@ figure {
 }
 
 .index-header-contacts li:first-child {
-    padding-right: 30px;
+    margin-right: 30px;
 }
 
 .index-header-li:hover {
     color: var(--index-link-color);
     fill: var(--index-link-color);
+    transition: cubic-bezier(0.4, 0, 0.2, 1), 250ms;
+    cursor: pointer;
+}
+
+.index-header-li:focus {
+    color: var(--index-link-color);
+    fill: var(--index-link-color);
+    transition: cubic-bezier(0.4, 0, 0.2, 1), 250ms;
     cursor: pointer;
 }
 
@@ -333,6 +342,41 @@ figure {
     padding-right: 30px;
 }
 
+
+
+
+.index-about-list .sign div{
+    position: absolute;
+    bottom: 0;
+    background-color: var(--index-first-bg);
+    opacity: 0.8;
+    width: 100%;
+    height: 70px;
+}
+
+.index-about-list .sign{
+    position: relative;
+}
+
+.index-about-list li p {
+    position: absolute;
+    bottom: 0px;
+    z-index: 1000;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Roboto';
+    color: var(--index-third-font-color);
+}
+
 /* INDEX ABOUT LIST */
 /* INDEX ABOUT LIST */
 /* INDEX ABOUT LIST */
@@ -442,6 +486,7 @@ figure {
 .index-team-icon:hover {
     background-color: var(--index-link-color);
     fill: #ffffff;
+    transition: cubic-bezier(0.4, 0, 0.2, 1), 250ms;
 }
 
 /* INDEX TEAM LIST */
@@ -487,6 +532,7 @@ figure {
 .index-client-icon:hover {
     fill: var(--index-icon-hover-color);
     border-color: var(--index-icon-hover-color);
+    transition: cubic-bezier(0.4, 0, 0.2, 1), 250ms;
 }
 
 .index-client-icon:not(:last-child) {
@@ -576,6 +622,7 @@ figure {
 .index-footer-contacts a:hover,
 .index-footer-contacts a:focus {
     color: var(--index-link-color);
+    transition: cubic-bezier(0.4, 0, 0.2, 1), 250ms;
 }
 
 .index-footer2 {
@@ -616,6 +663,7 @@ figure {
 
 .index-footer-icon:hover {
     background-color: var(--index-icon-hover-color);
+    transition: cubic-bezier(0.4, 0, 0.2, 1), 250ms;
 }
 
 .index-footer-icon:not(:last-child) {
@@ -717,6 +765,7 @@ figure {
 .portfolio-upper-link:hover,
 .portfolio-upper-link:focus {
     color: var(--portfolio-link-color);
+    transition: cubic-bezier(0.4, 0, 0.2, 1), 250ms;
 }
 
 .portfolio-header-contacts {
@@ -804,6 +853,7 @@ figure {
 .portfolio-button:focus {
     color: var(--portfolio-third-font-color);
     background-color: var(--portfolio-link-color);
+    transition: cubic-bezier(0.4, 0, 0.2, 1), 250ms;
 }
 
 .portfolio-signedphotos-list {
@@ -893,6 +943,7 @@ figure {
 .portfolio-footer-contacts a:hover,
 .portofolio-footer-contacts a:focus {
     color: var(--portfolio-link-color);
+    transition: cubic-bezier(0.4, 0, 0.2, 1), 250ms;
 }
 
 .portfolio-footer-contacts a {
@@ -958,12 +1009,10 @@ figure {
     height: 20px;
 }
 
-.portfolio-footer-icon:hover {
-    background-color: var(--index-icon-hover-color);
-}
-
+.portfolio-footer-icon:hover,
 .portfolio-footer-icon:focus {
     background-color: var(--index-icon-hover-color);
+    transition: cubic-bezier(0.4, 0, 0.2, 1), 250ms;
 }
 
 /* --- -P-O-R-T-F-O-L-I-O- -F-O-O-T-E-R --- */
