--- a/css/style.css
+++ b/css/style.css
@@ -822,6 +822,32 @@ figure {
     margin-bottom: 30px;
 }
 
+
+
+
+
+.img-portfolio{
+    overflow: hidden;
+    position: relative;
+}
+
+.box{
+    position: absolute;
+    color: green;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.box:hover{
+    transform: translatex(0);
+}
+
+
+
+
+
+
 .portfolio-figcaption {
     display: flex;
     flex-direction: column;
