--- a/css/style.css
+++ b/css/style.css
@@ -320,7 +320,7 @@ figure {
     position: relative;
 }
 
-.index-about-list .about-sign div{
+.index-about-list .about-sign div {
     position: absolute;
     bottom: 0;
     background-color: var(--index-first-bg);
@@ -745,18 +745,18 @@ figure {
     align-items: center;
 }
 
-.portfolio-header-contacts li svg{
+.portfolio-header-contacts li svg {
     margin-right: 10px;
 }
 
-.portfolio-header-contacts li:first-child{
+.portfolio-header-contacts li:first-child {
     margin-right: 30px;
 }
 
-.portfolio-header-icon:hover{
+.portfolio-header-icon:hover {
     color: var(--index-icon-hover-color);
     fill: var(--index-icon-hover-color);
-        transition: cubic-bezier(0.4, 0, 0.2, 1), 250ms;
+    transition: cubic-bezier(0.4, 0, 0.2, 1), 250ms;
 }
 
 .portfolio-header-contacts a {
@@ -822,43 +822,37 @@ figure {
     margin-bottom: 30px;
 }
 
-
-
-
-
-.img-portfolio{
+.portfolio-overlay-1 {
     position: relative;
     overflow: hidden;
 }
 
-.img-portfolio:hover{
-    /* position: relative;
-    cursor: pointer;
-    overflow: visible; */
-
-}
-
-.img-portfolio:hover .box{
-    background-color: green;
-transform: translatey(0);
-}
-
-.box{
+.portfolio-overlay {
     position: absolute;
-    transform: translatey(100%);
-    transition: transform 250ms ease;
-    width: 100%;
-    height: 75%;
-top: 0;
-left: 0;
-opacity: 0.8;
+    background-color: var(--portfolio-link-color);
+    opacity: 0.9;
+    overflow: hidden;
+    width: 370px;
+    height: 294px;
 }
 
-.box p {
-    transform: translatey(-3000%);
+.portfolio-overlay-1:hover .portfolio-overlay {
+    transform: translatey(-100%);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
+.portfolio-overlay-1:hover .portfolio-overlay>p {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    color: var(--index-third-font-color);
+    position: absolute;
+    text-align: left;
+    padding: 49px 45px 49px 25px;
+    opacity: none;
+}
 
 
 
