--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,7 @@ figure {
 }
 
 .index-h1 {
+    font-family: Roboto;
     font-weight: 900;
     font-size: 44px;
     letter-spacing: 0.06em;
@@ -231,25 +232,18 @@ figure {
     border: none;
     margin: 30px 500px 0 500px;
     position: relative;
+
 }
 
 .modal {
-    width: 528px;
+    min-width: 528px;
     height: 581px;
     background-color: green;
     position: absolute;
-    z-index: 1000;
-    overflow: hidden;
-    display: none;
+    top: 22%;
+    left: 50%;
+    transform: translate(-50%);
 }
-
-.index-button:hover .modal{
-position: absolute;
-cursor: default;
-        background-color: red;
-        display: flex;
-}
-
 
 .is-hidden{
     opacity: 0;
@@ -257,9 +251,21 @@ cursor: default;
     pointer-events: none;
 }
 
-.index-close-button{
+.close-btn{
     position: absolute;
     cursor: pointer;
+    left: 94.5%;
+    bottom: 95%;
+}
+
+.backrdop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: grey;
+    opacity: 0.5;
 }
 /* INDEX HEADER MAIN*/
 
