--- a/css/style.css
+++ b/css/style.css
@@ -238,11 +238,13 @@ figure {
 .modal {
     min-width: 528px;
     height: 581px;
-    background-color: green;
+    background-color: #fff;
     position: absolute;
     top: 22%;
     left: 50%;
     transform: translate(-50%);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
 }
 
 .is-hidden{
@@ -252,20 +254,22 @@ figure {
 }
 
 .close-btn{
-    position: absolute;
     cursor: pointer;
-    left: 94.5%;
-    bottom: 95%;
+    right: 0%;
+    top: 0%;
+    margin: 8px 8px 0 0;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
 }
 
-.backrdop {
+.backdrop {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: grey;
-    opacity: 0.5;
+    background-color: rgba(0, 0, 0, 0.2);
 }
 /* INDEX HEADER MAIN*/
 
