transiiton dla okna modalnego

--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,8 @@ figure {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+    transition: 500ms;
+    transition-timing-function: ease-in;
 }
 
 /* INDEX HEADER MAIN*/
