--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ figure {
     color: inherit;
 }
 
-.index-active:hover::after {
+.index-active::after {
     position: absolute;
     content: "";
     display: block;
@@ -784,7 +784,7 @@ figure {
     color: inherit;
 }
 
-.portfolio-active:hover::after {
+.portfolio-active::after {
     position: absolute;
     content: "";
     display: block;
@@ -898,6 +898,7 @@ figure {
     overflow: hidden;
     width: 370px;
     height: 294px;
+    cursor: pointer;
 }
 
 .portfolio-overlay-1:hover .portfolio-overlay {
